[tool.poetry]
name = "l9format"
version = "1.3.2"
license = "MIT"
description = "l9format is a schema declaration targeted at interoperability between network recon tools used at LeakIX"
authors = ["Danny Willems <danny@leakix.net>"]
maintainers = ["Danny Willems <danny@leakix.net>"]
readme = "README.md"
homepage = "https://github.com/leakix/l9format-python"
repository = "https://github.com/leakix/l9format-python"
documentation = "https://github.com/leakix/l9format-python"

[tool.poetry.dependencies]
python = "^3.13"
serde = "^0.9.0"

[tool.poetry.group.dev.dependencies]
black = "^26.1.0"
fire = "^0.7.1"
isort = "^7.0.0"
pip-audit = "^2.10.0"
pytest = "^9.0.2"
ruff = "^0.14.14"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.urls]
"Bug Tracker" = "https://github.com/leakix/l9format-python/issues"
