[tool.poetry]
name = "l9format"
version = "1.4.0"
license = "MIT"
description = "l9format is a schema declaration targeted at interoperability between network recon tools used at LeakIX"
authors = ["Danny Willems <danny@leakix.net>"]
maintainers = ["Danny Willems <danny@leakix.net>"]
readme = "README.md"
homepage = "https://github.com/leakix/l9format-python"
repository = "https://github.com/leakix/l9format-python"
documentation = "https://github.com/leakix/l9format-python"

[tool.poetry.dependencies]
python = "^3.11"
serde = "^0.9.0"

[tool.poetry.group.dev.dependencies]
black = "^26.1.0"
fire = "^0.7.1"
isort = "^7.0.0"
mypy = "^1.19.0"
pip-audit = "^2.10.0"
pytest = "^9.0.2"
ruff = "^0.14.14"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.urls]
"Bug Tracker" = "https://github.com/leakix/l9format-python/issues"

[tool.ruff]
line-length = 80

[tool.black]
line-length = 80

[tool.isort]
profile = "black"
line_length = 80

[tool.mypy]
python_version = "3.11"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
# serde library lacks type stubs, so we need to ignore import errors
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = "l9format.l9format"
# serde Model/Instance classes appear as Any, causing false positives
disable_error_code = ["misc", "valid-type"]
