[project]
name = "l9format"
version = "2.0.0"
license = {text = "MIT"}
description = "l9format is a schema declaration targeted at interoperability between network recon tools used at LeakIX"
authors = [{name = "Danny Willems", email = "danny@leakix.net"}]
maintainers = [{name = "Danny Willems", email = "danny@leakix.net"}]
readme = "README.md"
requires-python = ">=3.11"
dependencies = []

[project.urls]
Homepage = "https://github.com/leakix/l9format-python"
Repository = "https://github.com/leakix/l9format-python"
Documentation = "https://github.com/leakix/l9format-python"
"Bug Tracker" = "https://github.com/leakix/l9format-python/issues"

[dependency-groups]
dev = [
    "black>=26.1.0",
    "fire>=0.7.1",
    "isort>=7,<9",
    "mypy>=1.19.0",
    "pip-audit>=2.10.0",
    "pytest>=9.0.2",
    "ruff>=0.14.14,<0.16.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.sdist]
include = ["l9format/", "LICENSE", "README.md", "pyproject.toml"]

[tool.hatch.build.targets.wheel]
include = ["l9format/"]

[tool.ruff]
line-length = 80

[tool.black]
line-length = 80

[tool.isort]
profile = "black"
line_length = 80

[tool.mypy]
python_version = "3.11"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
